--- a/My_site.html
+++ b/My_site.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<nav>
+			   
+		</nav>
 		<meta charset="UTF-8">
 		<meta name="description" Content="cool site">
 		<title>Taiyabs Site</title>
 	</head>
 	<body style="background-color: grey;>
+		     <a href="https://www.google.com"></a>
 
 		<h1 Style="Color:blue;">Taiyab's cool site</h1>
 		<br/><br/>
